--- a/style.css
+++ b/style.css
@@ -91,11 +91,13 @@ html {
   font-size: 18px;            /* adjust if Figma specifies */
   font-weight: 500;  
    line-height: auto;           /* automatically adjusts */
-  letter-spacing: 0;         /* Medium / semi-bold */
+  letter-spacing: 0; 
+  box-shadow: 0px 0px 12px rgba(250, 18, 57, 0.58); 
+   transition: transform 0.2s, box-shadow 0.2s;        /* Medium / semi-bold */
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: background-color 0.3s ease;
+  
 }
 
 /* Hover effect */
@@ -189,7 +191,7 @@ html {
   line-height: 24px;           /* typical line-height */
   border: none;                /* remove default border */
   cursor: pointer;
-  box-shadow: 0px 4px 10px rgba(250, 18, 57, 0.3); /* shadow with #FA1239 */
+  box-shadow: 0px 0px 12px rgba(250, 18, 57, 0.58); /* shadow with #FA1239 */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -217,6 +219,7 @@ html {
   border: none;                /* remove default border */
   cursor: pointer;
   display: flex;
+  box-shadow: 0px 0px 12px rgba(250, 18, 57, 0.58);
   align-items: center;
   justify-content: center;
   transition: all 0.3s ease;   /* smooth hover effect */
@@ -246,6 +249,7 @@ html {
   height: 727.37px;
   object-fit: contain;
   display: block;
+  left: 94.13px;
   z-index: 2;
 }
 
